@@ -37,7 +37,7 @@ public class CompareAssertionBeanInfo extends BeanInfoSupport {
         p.setValue(NOT_EXPRESSION, Boolean.TRUE);
         p = property("compareTime"); //$NON-NLS-1$
         p.setValue(NOT_UNDEFINED, Boolean.TRUE);
-        p.setValue(DEFAULT, new Long(-1));
+        p.setValue(DEFAULT, Long.valueOf(-1));
         p.setValue(NOT_EXPRESSION, Boolean.FALSE);
         p = property("stringsToSkip"); //$NON-NLS-1$
         p.setPropertyEditorClass(TableEditor.class);
